--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
                                     <h1>BEFORE YOU FOLLOW</h1>
                                     <p>
                                         Please do not engage if your presence is rooted in hate, prejudice, or cruelty. Racism, homophobia, and any form of discrimination have no place here. If you lie, provoke unnecessary conflict, or find joy in mocking or humiliating others, this is not the space for you. This is meant to be a space of respect, sincerity, and peace. If your intentions go against that whether through malice, manipulation, or mockery, I kindly ask you to please leave. 
-
                                     </p>
                                 </div>
                                 <img src="images/paper-page.png" alt="paper-page">
@@ -98,14 +97,18 @@
             </div>
             <div class="portfolio-buttons">
                 <button id="prev-btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left-square-fill" viewBox="0 0 16 16">
-                        <path d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1"/>
-                    </svg>
+                    <div class="arrow-left blackout-button">
+                        <p>Back</p>
+                        <div class="arrow-top"></div>
+                        <div class="arrow-bottom"></div>
+                    </div>
                 </button>
                 <button id="next-btn">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-right-square-fill" viewBox="0 0 16 16">
-                        <path d="M0 14a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2a2 2 0 0 0-2 2zm4.5-6.5h5.793L8.146 5.354a.5.5 0 1 1 .708-.708l3 3a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708-.708L10.293 8.5H4.5a.5.5 0 0 1 0-1"/>
-                    </svg>
+                    <div class="arrow-right arrow-book">
+                        <p>Next</p>
+                        <div class="arrow-top"></div>
+                        <div class="arrow-bottom"></div>
+                    </div>
                 </button>
             </div>
         </div>
