--- a/index.html
+++ b/index.html
@@ -14,114 +14,123 @@
     <div class="portfolio-main-page">
         <div class="portfolio-center">
             <div class="portfolio-book">
-                <div class="eros-psycho">
-                    <img src="images/Eros-n-Psycho_NO-BG.png" alt="Eros-n-Psycho_NO-BG">
+                <div class="eros-psycho-section">
+                    <div id="IDrevealBook" class="eros-psycho-temp" onclick="revealBook()">
+                        <img src="images/Eros-n-Psycho_NO-BG.png" alt="Eros-n-Psycho_NO-BG">
+                    </div>
+                    <div class="eros-psycho-left-section"></div>
                 </div>
-                <div class="book-container">
-                    <div class="container-callisto-book-header">
-                        <p>Callisto</p>
-                        <div class="bottom-callisto-book-header"></div>
-                    </div>
-                    <div id="book" class="book">
-                        <div id="p1" class="paper">
-                            <div class="front">
-                                <div id="f1" class="front-content">
-                                    <img src="images/cover-page.png" alt="cover-page">
-                                </div>
-                            </div>
-                            <div class="back">
-                                <div id="b1" class="back-content">
-                                    <img src="images/cover-back-page.png" alt="cover-back-page">
-                                </div>
-                            </div>
+                <div class="book-section">
+                    <div class="book-right-section"></div>
+                    <div class="book-container">
+                        <div class="container-callisto-book-header">
+                            <p>Callisto</p>
+                            <div class="bottom-callisto-book-header"></div>
                         </div>
-                        <div id="p2" class="paper">
-                            <div class="front">
-                                <div id="f2" class="front-content">
-                                    <div class="page-info">
-                                        <h4>call me Cal/Calli/Lili
-                                            <br>
-                                            She/her. 17. Filipino. Infj-t.
-                                            <br>
-                                            Gemini. Fil/Eng
-                                        </h4>
-                                        <hr>
-                                        <h1>BEFORE YOU FOLLOW</h1>
-                                        <p>
-                                            I’m not particularly active in social interactions, although this may change as mutual familiarity develops. I tend to be candid and speak with honesty, which may unintentionally come across as blunt or impolite, please know that it’s never my intention to offend, and I offer my apologies in advance. It's simply a part of how I naturally communicate. Additionally, I have a tendency to be forgetful or act absentmindedly at times, so I appreciate your patience and understanding.
-                                        </p>
-                                        <hr>
-                                        <h1>BEFORE YOU FOLLOW</h1>
-                                        <p>
-                                            Please do not engage if your presence is rooted in hate, prejudice, or cruelty. Racism, homophobia, and any form of discrimination have no place here. If you lie, provoke unnecessary conflict, or find joy in mocking or humiliating others, this is not the space for you. This is meant to be a space of respect, sincerity, and peace. If your intentions go against that whether through malice, manipulation, or mockery, I kindly ask you to please leave. 
-                                        </p>
+                        <div id="book" class="book">
+                            <div id="p1" class="paper">
+                                <div class="front">
+                                    <div id="f1" class="front-content">
+                                        <img src="images/cover-page.png" alt="cover-page">
                                     </div>
-                                    <img src="images/paper-page.png" alt="paper-page">
+                                </div>
+                                <div class="back">
+                                    <div id="b1" class="back-content">
+                                        <img src="images/cover-back-page.png" alt="cover-back-page">
+                                    </div>
                                 </div>
                             </div>
-                            <div class="back">
-                                <div id="b2" class="back-content">
-                                    <img src="images/paper-page.png" alt="paper-page">
+                            <div id="p2" class="paper">
+                                <div class="front">
+                                    <div id="f2" class="front-content">
+                                        <div class="page-info">
+                                            <h4>call me Cal/Calli/Lili
+                                                <br>
+                                                She/her. 17. Filipino. Infj-t.
+                                                <br>
+                                                Gemini. Fil/Eng
+                                            </h4>
+                                            <hr>
+                                            <h1>BEFORE YOU FOLLOW</h1>
+                                            <p>
+                                                I’m not particularly active in social interactions, although this may change as mutual familiarity develops. I tend to be candid and speak with honesty, which may unintentionally come across as blunt or impolite, please know that it’s never my intention to offend, and I offer my apologies in advance. It's simply a part of how I naturally communicate. Additionally, I have a tendency to be forgetful or act absentmindedly at times, so I appreciate your patience and understanding.
+                                            </p>
+                                            <hr>
+                                            <h1>BEFORE YOU FOLLOW</h1>
+                                            <p>
+                                                Please do not engage if your presence is rooted in hate, prejudice, or cruelty. Racism, homophobia, and any form of discrimination have no place here. If you lie, provoke unnecessary conflict, or find joy in mocking or humiliating others, this is not the space for you. This is meant to be a space of respect, sincerity, and peace. If your intentions go against that whether through malice, manipulation, or mockery, I kindly ask you to please leave. 
+                                            </p>
+                                        </div>
+                                        <img src="images/paper-page.png" alt="paper-page">
+                                    </div>
+                                </div>
+                                <div class="back">
+                                    <div id="b2" class="back-content">
+                                        <img src="images/paper-page.png" alt="paper-page">
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div id="p3" class="paper">
-                            <div class="front">
-                                <div id="f3" class="front-content">
-                                    <div class="page-info">
-                                        <br>
-                                        <br>
-                                        <br>
-                                        <hr>
-                                        <h1>LIKES</h1>
-                                        <p>
-                                            drawing, singing, dancing ( often ), listening to music, reading online comics, support artists in other platforms, making es avi fits, and spend time having a nice chit-chat with my best friends.
-                                        </p>
-                                        <br>
-                                        <br>
-                                        <br>
-                                        <br>
-                                        <br>
-                                        <hr>
-                                        <h1>DISLIKES</h1>
-                                        <p>
-                                            Please do not engage if your presence is rooted in hate, prejudice, or cruelty. Racism, homophobia, and any form of discrimination have no place here. If you lie, provoke unnecessary conflict, or find joy in mocking or humiliating others, this is not the space for you. This is meant to be a space of respect, sincerity, and peace. If your intentions go against that whether through malice, manipulation, or mockery, I kindly ask you to please leave.
+                            <div id="p3" class="paper">
+                                <div class="front">
+                                    <div id="f3" class="front-content">
+                                        <div class="page-info">
+                                            <br>
+                                            <br>
+                                            <br>
+                                            <hr>
+                                            <h1>LIKES</h1>
+                                            <p>
+                                                drawing, singing, dancing ( often ), listening to music, reading online comics, support artists in other platforms, making es avi fits, and spend time having a nice chit-chat with my best friends.
+                                            </p>
+                                            <br>
+                                            <br>
+                                            <br>
+                                            <br>
+                                            <br>
+                                            <hr>
+                                            <h1>DISLIKES</h1>
+                                            <p>
+                                                Please do not engage if your presence is rooted in hate, prejudice, or cruelty. Racism, homophobia, and any form of discrimination have no place here. If you lie, provoke unnecessary conflict, or find joy in mocking or humiliating others, this is not the space for you. This is meant to be a space of respect, sincerity, and peace. If your intentions go against that whether through malice, manipulation, or mockery, I kindly ask you to please leave.
 
-                                        </p>
+                                            </p>
+                                        </div>
+                                        <img src="images/paper-page.png" alt="paper-page">
                                     </div>
-                                    <img src="images/paper-page.png" alt="paper-page">
                                 </div>
-                            </div>
-                            <div class="back">
-                                <div id="b3" class="back-content">
-                                    <img src="images/cover-page.png" alt="cover-page">
+                                <div class="back">
+                                    <div id="b3" class="back-content">
+                                        <img src="images/cover-page.png" alt="cover-page">
+                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="container-eros-psycho-book-bg">
-                        <div class="eros-psycho-book-bg">
-                            <img src="images/Eros-n-Psycho_NO-BG.png" alt="Eros-n-Psycho_NO-BG">
+                        <div class="container-eros-psycho-book-bg">
+                            <div class="eros-psycho-book-bg">
+                                <img src="images/Eros-n-Psycho_NO-BG.png" alt="Eros-n-Psycho_NO-BG">
+                            </div>
+                            <div class="bottom-eros-psycho-book-bg"></div>
                         </div>
-                        <div class="bottom-eros-psycho-book-bg"></div>
                     </div>
                 </div>
             </div>
             <div class="portfolio-buttons">
-                <button id="prev-btn">
-                    <div class="arrow-left blackout-button">
-                        <p>Back</p>
-                        <div class="arrow-top"></div>
-                        <div class="arrow-bottom"></div>
-                    </div>
-                </button>
-                <button id="next-btn">
-                    <div class="arrow-right arrow-book">
-                        <p>Next</p>
-                        <div class="arrow-top"></div>
-                        <div class="arrow-bottom"></div>
-                    </div>
-                </button>
+                <div style="width: 10px; height: 600px;"></div>
+                <div>
+                    <button id="prev-btn">
+                        <div class="arrow-left blackout-button">
+                            <p>Back</p>
+                            <div class="arrow-top"></div>
+                            <div class="arrow-bottom"></div>
+                        </div>
+                    </button>
+                    <button id="next-btn">
+                        <div class="arrow-right arrow-book">
+                            <p>Next</p>
+                            <div class="arrow-top"></div>
+                            <div class="arrow-bottom"></div>
+                        </div>
+                    </button>
+                </div>
             </div>
         </div>
     </div>
